--- a/plugins/TimeBasePhotoGallery/views/public/css/rows.css
+++ b/plugins/TimeBasePhotoGallery/views/public/css/rows.css
@@ -1,106 +1,68 @@
 
-
- #container{
-  min-height:760px;
-  position:relative;
- }
-
- #container.loading{
-  background-image: url('../img/loader.gif');
-  background-position:center;
-  background-repeat:no-repeat;
- }
-
- #header{
-    background: white;
-    padding: 5px 10px 5px 10px;
-    border: 1px solid #CCC;
-    margin-bottom: 4px;
-    margin-top: 20px;
- }
-
- #footer{
-  margin-bottom: 20px;
-  margin-top: 4px;
-  font-size: 14px;
-  /*line-height:8px;*/
- }
-
- #header h1{
-  margin: 0 10px 0 0;
-  font-size: 24px;
-  font-weight: 400;
-  position: relative;
- }
-
-#nav{
-  display: inline;
-  position:absolute;
-  right:0;
-  bottom:0;
-  font-size:20px;
+.image-library-body.loading{
+    background-image: url('../img/loader.gif');
 }
- #pics{
-  height:120px;
-  width: 955px;
-  /*width:10000px;*/
-/*  height:100%;
-  width:100%;*/
-  padding:0px;
-  margin:5px 0px 0px 20px;
-  position:absolute;
-/*  -webkit-transition: all 2s ;
-   -moz-transition: all 2s ;*/
- }
+#pics{
+    height:120px;
+    width: 955px;
+    /*width:10000px;*/
+    /*  height:100%;
+      width:100%;*/
+    padding:0px;
+    margin:5px 0px 0px 20px;
+    position:absolute;
+    /*  -webkit-transition: all 2s ;
+       -moz-transition: all 2s ;*/
+}
 
- #newpics{
- height:120px;
-  width: 955px;
-  padding:0px;
-  margin:5px 0px 0px 20px;
-  position:absolute;
-  left:980px;
- }
-
- 
-
- #zoombox{
-  position:absolute;
-  z-index:999;
- }
-
- #zoombox .zoomed{
-  width:100%;
-  height:900px;
-  left:0px;
-  top:0px;
-  -webkit-transition: all 1.0s ;
-  -moz-transition: all 1.0s ;
- }
+#newpics{
+    height:120px;
+    width: 955px;
+    padding:0px;
+    margin:5px 0px 0px 20px;
+    position:absolute;
+    left:980px;
+}
 
 
 
- .itempic{
+#zoombox{
+    position:absolute;
+    z-index:999;
+}
+
+#zoombox .zoomed{
+    width:100%;
+    height:900px;
+    left:0px;
+    top:0px;
+    -webkit-transition: all 1.0s ;
+    -moz-transition: all 1.0s ;
+}
+
+
+
+.itempic{
     max-height:110px;
     max-width: 140px;
     clear:both;
     border: 1px #ccc solid;
- }
+}
 
 .itemli {
-  width: 140px;
-  height: 110px;
-  margin: 1px 5px 0 8px;
-  float: left;
-  list-style: none;
-  position: relative;
-  background: white;
-  padding: 2px;
-  background-position: center center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-origin: content-box;
-  border: 1px solid transparent;
+    width: 140px;
+    height: 110px;
+    margin: 1px 5px 0 8px;
+    float: left;
+    list-style: none;
+    position: relative;
+    background: white;
+    padding: 2px;
+    background-position: center center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-origin: content-box;
+    border: 1px solid transparent;
 
 }
 
@@ -109,35 +71,35 @@
 }
 
 .itemli:hover{
-  border:1px solid #ccc;
-  cursor:hand;
+    border:1px solid #ccc;
+    cursor:hand;
 }
 
 .pictitle {
-  font-size: 11px;
-  line-height: 12px;
-  color: black;
-  padding: 4px 1px 0 1px;
-  position: absolute;
-  top: 117px;
-  /*left: 0px;*/
+    font-size: 11px;
+    line-height: 12px;
+    color: black;
+    padding: 4px 1px 0 1px;
+    position: absolute;
+    top: 117px;
+    /*left: 0px;*/
 }
 
 
- .datelinks {
-  list-style:none;
+.datelinks {
+    list-style:none;
 
- /* width: 80%;*/
- /* margin-left: 10%;*/
-  height: 20px;
-  position:absolute;
-  bottom: -17px;
-  padding:0 0 0 17px;
+    /* width: 80%;*/
+    /* margin-left: 10%;*/
+    height: 20px;
+    position:absolute;
+    bottom: -17px;
+    padding:0 0 0 17px;
 
 
- }
+}
 
- .datelinks li{
+.datelinks li{
     background: #d7d7d7;
     float:left;
     position:relative;
@@ -146,244 +108,241 @@
     margin: 0 2px 0 0;
     padding: 1px 0 1px 2px;
     font-size: 12px;
- }
+}
 
- .datelinks li:hover, .button:hover{
+.datelinks li:hover, .button:hover{
     background-color: #bbb;
     cursor:hand;
- }
+}
 
 
 
 div #decadehisto{
-  height:900px;
-  width:100px;
+    height:900px;
+    width:100px;
 
-  position:relative;  
+    position:relative;
 }
 
 div.histoli{
-  /*float:left;*/
-  height:10px;
-  width:5px;
-  position:relative;
-  /*bottom:0;*/
-  background:#aaa;
-  margin: 2px 0 0 0 ;
-  padding: 0;
+    /*float:left;*/
+    height:10px;
+    width:5px;
+    position:relative;
+    /*bottom:0;*/
+    background:#aaa;
+    margin: 2px 0 0 0 ;
+    padding: 0;
 
 }
 
 span.term{
-  cursor: pointer;
+    cursor: pointer;
 }
 
- span.selected{
-  color:#f00;
+span.selected{
+    color:#f00;
 }
 
 .clusterdiv {
-  float:left;
-  margin:2px 2px 0 0 ;
-  padding:0px;
-  position:relative;
-  overflow:hidden;
-  background-color:#777;
-  border: 1px solid #999;
-  color: #fff;
-  font-size: 14px;
-  opacity:1.0;
-  -webkit-transition: all 1s;
-  -moz-transition: all 1s;
- 
+    float:left;
+    margin:2px 2px 0 0 ;
+    padding:0px;
+    position:relative;
+    overflow:hidden;
+    background-color:#777;
+    border: 1px solid rgba(153, 153, 153, 0);
+    color: #fff;
+    font-size: 14px;
+    opacity:1.0;
+    -webkit-transition: all 1s;
+    -moz-transition: all 1s;
+
 }
 
 
 .clusterterms, .clusterdecades{
-  list-style:none;
-  z-index:10;
-  font-size: 11px;
-  position:absolute;
-  left:5px;
-  padding:0;
-  margin:0;
-  /*margin: 0 0 0 5px;*/
-  /*line-height:14px;*/
-   text-shadow: 1px 1px 2px #000;
-   opacity:0;
-   -webkit-transition: opacity 1s;
-   -moz-transition: opacity 1s;
+    list-style:none;
+    z-index:10;
+    font-size: 11px;
+    position:absolute;
+    left:5px;
+    padding:0;
+    margin:0;
+    /*margin: 0 0 0 5px;*/
+    /*line-height:14px;*/
+    text-shadow: 1px 1px 2px #000;
+    opacity:0;
+    -webkit-transition: opacity 1s;
+    -moz-transition: opacity 1s;
 }
 
 .clusterdecades{
-  text-align:right;
-  right:5px;
+    text-align:right;
+    right:5px;
 }
 
 .showterms{
-  opacity:1.0;
+    opacity:1.0;
 }
 
- div .unfocused{
-  opacity:0.2;
+div .unfocused{
+    opacity:0.2;
 }
 
 .clusterdiv:hover{
-  border: 1px solid #fff;
-  cursor:hand;
+    border: 1px solid #fff;
+    cursor:hand;
 }
 
 .clusterlabel{
-  background-color:rgba(0,0,0,0.2);
-  color:#fff;
-  text-shadow: #000 1px 1px 2px;
-  font-size: 13px;
-  display:block;
- /* width:100%;*/
- clear:both;
-  padding:1px 1px 1px 2px;
-  position:relative;
-  z-index:1;
-  text-align:middle;
- /* margin:1px;*/
+    background-color:rgba(0, 0, 0, 0.48);
+    color:#fff;
+    text-shadow: #000 1px 1px 2px;
+    font-size: 13px;
+    display:block;
+    clear:both;
+    padding:1px 1px 1px 2px;
+    position:relative;
+    z-index:1;
+    text-align:middle;
+    /* margin:1px;*/
 }
 
 .clustercount {
-  color: white;
-  /*background: #666;*/
-  font-size: 10px;
-  float: right;
-  opacity: 1.0;
-  position: absolute;
-  padding: 1px;
-  /*text-shadow: none;*/
-  top: 0;
-  right: 0;
+    color: white;
+    float: right;
+    opacity: 1.0;
+    position: absolute;
+    padding: 1px;
+    /*text-shadow: none;*/
+    top: 0;
+    right: 0;
 }
 
 .clusterimg{
-  /*height: 80px;*/
-  /*max-width:100%;*/
-  /*max-height:100%;*/
-  position:absolute;
-  right:0;
-  top:0;
-  /*bottom:0;*/
-  opacity:0;
-  -webkit-transition: opacity 3.0s ;
-     -moz-transition: opacity 3.0s ;
+    /*height: 80px;*/
+    /*max-width:100%;*/
+    /*max-height:100%;*/
+    position:absolute;
+    right:0;
+    top:0;
+    /*bottom:0;*/
+    opacity:0;
+    -webkit-transition: opacity 3.0s ;
+    -moz-transition: opacity 3.0s ;
 }
 
 .showme{
-  opacity:1.0;
+    opacity:1.0;
 }
 
 .clustercaption{
-  position:absolute;
-  bottom:0;
-  width:100%;
-  background:#000;
-  color:#fff;
-  font-size:11px;
-  line-height: 12px;
-  padding:2px;
-  clear:both;
-  opacity:0;
-  z-index:99;
-  -webkit-transition: all 0.5s ;
-  -moz-transition: all 0.5s ;
+    position:absolute;
+    bottom:0;
+    width:100%;
+    background:#000;
+    color:#fff;
+    font-size:11px;
+    line-height: 12px;
+    padding:2px;
+    clear:both;
+    opacity:0;
+    z-index:99;
+    -webkit-transition: all 0.5s ;
+    -moz-transition: all 0.5s ;
 }
 
 .showcaption{
-  opacity:0.8;
+    opacity:0.8;
 }
 
 
 .row{
-  float:left;
-  /*clear:both;*/
-  margin:3px;
-  padding:0;
+    float:left;
+    /*clear:both;*/
+    margin:3px;
+    padding:0;
 }
 
 
 #itembox{
-  clear:both;
-  width:100%;
-  height:180px;
-  background:#eee;
-  margin: 3px 3px 0 0;
-  border: 1px solid #aaa;
-  position:relative;
-  float:left;
-  overflow-x:hidden;
-  overflow-y:hidden;
+    clear:both;
+    width:100%;
+    height:180px;
+    background:#eee;
+    margin: 3px 3px 0 0;
+    border: 1px solid #aaa;
+    position:relative;
+    float:left;
+    overflow-x:hidden;
+    overflow-y:hidden;
 }
 
 
 
 #rightbutton{
-  right:0;
-  /*border-left: 1px solid #aaa;*/
+    right:0;
+    /*border-left: 1px solid #aaa;*/
 }
 
 #leftbutton{
-  left:0;
-  /*border-right: 1px solid #aaa;*/
+    left:0;
+    /*border-right: 1px solid #aaa;*/
 }
 
 
 
 #bigitem{
-  position: fixed;
-  min-width: 400px;
-  min-height: 400px;
-  background: white;
-  padding: 25px;
-  z-index: 99;
-  border: 1px solid #888;
-  box-shadow: 5px 5px 20px black;
-  left: 100px;
-  top: 100px;
+    position: fixed;
+    min-width: 400px;
+    min-height: 400px;
+    background: white;
+    padding: 25px;
+    z-index: 99;
+    border: 1px solid #888;
+    box-shadow: 5px 5px 20px black;
+    left: 100px;
+    top: 100px;
 }
 
 #bigitem img{
-  margin-bottom:10px;
+    margin-bottom:10px;
 }
 
 
 #bigitem .bigworkinfo{
-  position: relative;
-  bottom: 0px;
-  min-height:60px;
+    position: relative;
+    bottom: 0px;
+    min-height:60px;
 }
 
 #bigitem h3, #bigitem h4{
-  font-weight:normal;
-  margin:0;
+    font-weight:normal;
+    margin:0;
 }
 
 #bigitem .closebutton {
-  position:absolute;
-  right: 0px;
-  bottom: -5px;
-  font-size: 24px;
-  color: #DDD;
+    position:absolute;
+    right: 0px;
+    bottom: -5px;
+    font-size: 24px;
+    color: #DDD;
 }
 
 #bigitem .closebutton:hover{
-  cursor:hand;
-  color:#000;
-} 
+    cursor:hand;
+    color:#000;
+}
 
-#backdrop{ 
-  background: rgba(0,0,0,0.7);
-  width:100%;
-  height:100%;
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index:98;
+#backdrop{
+    background: rgba(0,0,0,0.7);
+    width:100%;
+    height:100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index:98;
 }
 
 
