--- a/themes/seasons/css/style.css
+++ b/themes/seasons/css/style.css
@@ -1654,7 +1654,7 @@ label {
    ========================================================================== */
 .t-header {
     padding: 0 2em 0;
-    min-height: 210px;
+    min-height: 197px;
     background: url('../img/bg-top.png?1375060446') 0 top repeat-x;
 }
 .t-header:after {
@@ -1750,7 +1750,7 @@ label {
 
 .flexslider {
     position: relative;
-    padding: 2em 4em 0;
+    padding: 1.7em 4em 0;
 }
 .flexslider:after {
     content: "";
@@ -1816,7 +1816,7 @@ label {
 
 .post--carousel .post_title {
     margin-bottom: .56em !important;
-    font-size: 30px;
+    font-size: 27px;
 }
 .post--carousel .post_title a {
     text-decoration: none;
@@ -1830,8 +1830,8 @@ label {
     -ms-border-radius: 100%;
     -o-border-radius: 100%;
     border-radius: 100%;
-    height: 310px;
-    width: 310px;
+    height: 260px;
+    width: 260px;
     margin-right: -310px;
     border: 7px solid rgba(183, 165, 155, 0.39);
     -webkit-box-sizing: border-box;
@@ -1845,8 +1845,8 @@ label {
 }
 
 .post--carousel .post_content {
-    padding-left: 25em;
-    padding-top: 1em;
+    padding-left: 22em;
+    padding-top: 3%;
     text-shadow: rgba(235, 235, 235, 0.47) 0 1px 0;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -2824,7 +2824,7 @@ div.search--spread #advanced-search:hover {
     background: rgba(187, 177, 155, 0.25);
     margin-top: -11px;
     margin-bottom: .5em;
-    padding: 3em 0 1.4em 0;
+    padding: 2.1em 0 1em 0;
     border-bottom: 1px solid rgba(194, 153, 99, 0.28);
     border-top: 1px solid rgba(194, 153, 99, 0.28);
 }
@@ -4958,7 +4958,7 @@ div#comments-container::after {
     background: white;
     padding: 8px 14px;
     border: 1px solid #CCC;
-    margin-top: 20px;
+    margin-top: 3.5em;
 }
 
 .image-library-title{
